k8s-manifests/overlays/dev/dev.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-dmsp-api-deployment
  labels:
    app.kubernetes.io/name: ai-dmsp-api
    app.kubernetes.io/component: web-api-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ai-dmsp-api
      app.kubernetes.io/component: web-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ai-dmsp-api
        app.kubernetes.io/component: web-api
    spec:
      serviceAccountName: ai-dmsp
      containers:
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          securityContext:
            runAsNonRoot: true
          command:
          - "/cloud_sql_proxy"
          - "-ip_address_types=PRIVATE"
          - "-instances=$(CLOUDSQL_INSTANCE_NAME)=tcp:3306"
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
        - name: api-web
          image: ai-dmsp-api-image
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              port: 3001
              path: /healthz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-dmsp-react-deployment
  labels:
    app.kubernetes.io/name: ai-dmsp-react
    app.kubernetes.io/component: web-react-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ai-dmsp-react
      app.kubernetes.io/component: web-react
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ai-dmsp-react
        app.kubernetes.io/component: web-react
    spec:
      serviceAccountName: ai-dmsp
      containers:
        - name: react-web
          image: ai-dmsp-react-image
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /
